# django-saas-api

./: .env.development  README.md  compose.yaml  pyproject.toml  start-dev-server.sh
docker/api-server/: Dockerfile
project/settings/: base.py
