[tool.poetry]
name = "django-saas-api"
version = "0.1.0"
description = ""
authors = ["Mohsin Raza <mohsin.doer@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.0"
django = "^5.0.2"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
